--- a/prototype-client-web/pom.xml
+++ b/prototype-client-web/pom.xml
@@ -6,5 +6,6 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>prototype-client-web</artifactId>
+  <name>${project.artifactId}</name>
   <packaging>war</packaging>
 </project>
