--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	</organization>
 	<modules>
 		<module>prototype-common</module>
-		<module>prototype-client-web</module>
+		<module>prototype-presentation-web</module>
 		<module>prototype-business-edge</module>
 		<module>prototype-business-application</module>
 		<module>prototype-business-domain</module>
