--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,12 @@
         <grpc_version>1.2.0</grpc_version>
         <protobuf_java_version>3.2.0</protobuf_java_version>
         <!-- Spring Framework -->
-        <springframework_version>4.2.6.RELEASE</springframework_version>
+        <springframework_version>4.2.8.RELEASE</springframework_version>
         <!-- JSR 303 with Hibernate Validator -->
         <validation_api_version>1.1.0.Final</validation_api_version>
         <hibernate_validator_version>5.4.1.Final</hibernate_validator_version>
+        <!-- swagger libs -->
+        <springfox_swagger_version>2.6.1</springfox_swagger_version>
         <!-- Common libs -->
         <guava_version>19.0</guava_version>
         <slf4j_log4j12_version>1.7.5</slf4j_log4j12_version>
@@ -143,7 +145,18 @@
 	            <groupId>org.hibernate</groupId>
 	            <artifactId>hibernate-validator</artifactId>
 	            <version>${hibernate_validator_version}</version>
-	        </dependency>            
+	        </dependency>   
+	        <!-- swagger libs -->
+	        <dependency>
+	            <groupId>io.springfox</groupId>
+	            <artifactId>springfox-swagger2</artifactId>
+	            <version>${springfox_swagger_version}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>io.springfox</groupId>
+	            <artifactId>springfox-swagger-ui</artifactId>
+	            <version>${springfox_swagger_version}</version>
+	        </dependency>         
             <!-- Jackson lib -->
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
