--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <protobuf_java_version>3.2.0</protobuf_java_version>
         <!-- Spring Framework -->
         <springframework_version>4.2.8.RELEASE</springframework_version>
+        <spring_security_version>4.1.0.RELEASE</spring_security_version>
         <!-- JSR 303 with Hibernate Validator -->
         <validation_api_version>1.1.0.Final</validation_api_version>
         <hibernate_validator_version>5.4.1.Final</hibernate_validator_version>
@@ -49,6 +50,7 @@
         <jackson.version>2.2.3</jackson.version>
         <junit_version>4.11</junit_version>
         <mockito_all_version>1.10.19</mockito_all_version>  
+        <hamcrest_version>1.3</hamcrest_version>
         <!-- Build args -->
         <file_encoding>UTF-8</file_encoding>
         <argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline>
@@ -135,6 +137,22 @@
                 <artifactId>spring-webmvc</artifactId>
                 <version>${springframework_version}</version>
             </dependency>
+            <!-- Spring Security -->
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-web</artifactId>
+                <version>${spring_security_version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-config</artifactId>
+                <version>${spring_security_version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${springframework_version}</version>
+            </dependency>
 	        <!-- JSR 303 with Hibernate Validator -->
 	        <dependency>
 	            <groupId>javax.validation</groupId>
@@ -212,12 +230,28 @@
                 <version>${mockito_all_version}</version>
                 <scope>test</scope>
             </dependency>
+			<dependency>
+			    <groupId>org.hamcrest</groupId>
+			    <artifactId>hamcrest-all</artifactId>
+			    <version>${hamcrest_version}</version>
+			    <scope>test</scope>
+			</dependency>
+	        <dependency>  
+	            <groupId>org.springframework</groupId>  
+	            <artifactId>spring-test</artifactId>  
+	            <version>${springframework_version}</version>
+	            <scope>test</scope>  
+	        </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
