--- a/prototype-presentation-web/WebContent/WEB-INF/web.xml
+++ b/prototype-presentation-web/WebContent/WEB-INF/web.xml
@@ -52,8 +52,17 @@
     <filter-mapping>  
         <filter-name>HiddenHttpMethodFilter</filter-name>  
         <url-pattern>/*</url-pattern>  
-    </filter-mapping> 	
-	
+    </filter-mapping>
+    
+	<filter>
+	    <filter-name>springSecurityFilterChain</filter-name>
+	    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+	    <filter-name>springSecurityFilterChain</filter-name>
+	    <url-pattern>/*</url-pattern>
+	</filter-mapping> 	
+		
 	<!-- MVC Servlet -->
 	<servlet>
 		<servlet-name>springServlet</servlet-name>
